# jupyterlab-minio

./: .gitignore  .prettierignore  CHANGELOG.md  README.md  RELEASE.md  Todo.md  conftest.py  jest.config.js  package-lock.json  package.json  pyproject.toml  pyproject_old.toml  setup.py  tsconfig.json  webpack.config.js
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yaml
.github/workflows/: binder.yml  build.yml  check-release.yml  release.yml
binder/: environment.yml  postBuild
jupyterlab-minio/: __init__.py  env_manager.py  handlers.py  utils.py
jupyterlab-minio/startup_hooks/: .Rprofile  00-minio-env.py  minio-env.sh  startup.jl
jupyterlab-minio/tests/: conftest.py  test_handlers.py
src/: browser.ts  contents.ts  dialogs.ts  env-sync.ts  handler.ts  i18n.ts  icons.ts  index.ts  s3.ts
src/__tests__/: jupyterlab-minio.spec.ts
style/: base.css
ui-tests/: package-lock.json  package.json
ui-tests/tests/: jupyterlab-minio.spec.ts
