[build-system]
requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1", "setuptools>=40.8.0"]
build-backend = "jupyter_packaging.build_api"

[tool.jupyter-packaging.options]
skip-if-exists = ["jupyterlab-minio/labextension/static/style.js"]
ensured-targets = ["jupyterlab-minio/labextension/static/style.js", "jupyterlab-minio/labextension/package.json"]

[tool.jupyter-packaging.builder]
factory = "jupyter_packaging.npm_builder" 

[tool.jupyter-packaging.build-args]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.check-manifest]
ignore = ["jupyterlab-minio/labextension/**", "yarn.lock", ".*", "package-lock.json"]